# rindus-technical-test

./: .env.template  .env.test  Dockerfile  Dockerfile_test  README.md  docker-compose.test.yml  docker-compose.yml  makefile  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  main.py  models.py
app/repositories/: user.py
app/routers/: user.py
app/schemas/: user.py
app/services/: user.py
kubernetes/: app_deployment.yaml  configmap.yaml  mysql_deployment.yaml  secret.yaml
tests/: conftest.py
tests/integration/: test_user_repository_integration.py  test_user_router_integration.py
tests/unit/: test_user_service_unit.py
